shellfirm/src/snapshots/shellfirm__checks__test_checks__can_check_custom_filter_with_file_exists.snap
---
source: shellfirm/src/checks.rs
expression: "check_custom_filter(&check, command.as_ref())"
---
false
