shellfirm/src/snapshots/shellfirm__checks__test_checks__can_check_custom_filter_with_str_contains-2.snap
---
source: shellfirm/src/checks.rs
expression: "check_custom_filter(&check, \"delete --dry-run\")"
---
false
