shellfirm/src/snapshots/shellfirm__checks__test_checks__can_run_check_on_command-2.snap
---
source: shellfirm/src/checks.rs
expression: "run_check_on_command(&checks, \"unknown command\")"
---
[]
