shellfirm/src/snapshots/shellfirm__checks__test_checks__can_run_check_on_command.snap
---
source: shellfirm/src/checks.rs
expression: "run_check_on_command(&checks, \"test-1\")"
---
[
    Check {
        id: "",
        test: test-(1),
        description: "",
        from: "test-1",
        challenge: Math,
        filters: [],
        alternative: None,
        alternative_info: None,
        severity: Medium,
    },
    Check {
        id: "",
        test: test-(1|2),
        description: "",
        from: "test-2",
        challenge: Math,
        filters: [],
        alternative: None,
        alternative_info: None,
        severity: Medium,
    },
]
