shellfirm/src/snapshots/shellfirm__checks__test_checks__is_match_command-2.snap
---
source: shellfirm/src/checks.rs
expression: "&contains_check"
---
Check {
    id: "id",
    test: "test",
    method: Contains,
    description: "",
    from: "",
    challenge: Math,
    filters: {},
}
