shellfirm/src/snapshots/shellfirm__checks__test_checks__is_match_command-3.snap
---
source: shellfirm/src/checks.rs
expression: "&startwith_check"
---
Check {
    id: "id",
    test: "start",
    method: StartWith,
    description: "",
    from: "",
    challenge: Default,
    filters: {},
}
