shellfirm/src/snapshots/shellfirm__checks__test_checks__is_match_command.snap
---
source: shellfirm/src/checks.rs
expression: "&regex_check"
---
Check {
    id: "id",
    test: "rm.+(-r|-f|-rf|-fr)*",
    method: Regex,
    description: "",
    from: "",
    challenge: Math,
    filters: {},
}
